--- a/views/backbone/card-assign.jade
+++ b/views/backbone/card-assign.jade
@@ -4,15 +4,13 @@ script#template-card-assign-view(type="text/template")
   |  h3 Assign
   |div.modal-body
   |  ul.assignee
-  |    - members.forEach(function(member){
-  |    - if (member.checked){
-  |    li.js-select-assignee.checked(data-uid= member.userId._id)= member.userId.username
-  |      span 
-  |    - }else{
-  |    li.js-select-assignee(data-uid= member.userId._id)= member.userId.username
-  |      span 
-  |    - }
-  |    - })
+  |    each member in members
+  |      if member.checked
+  |        li.js-select-assignee.checked(data-uid= member.userId._id)= member.userId.username
+  |          span 
+  |      else
+  |        li.js-select-assignee(data-uid= member.userId._id)= member.userId.username
+  |          span 
   |footer.modal-footer
   |  button#save-board-edit.btn.btn-primary.js-save-assignee Save
   |  button#cancel-board-edit.btn.js-cancel-assign-window Cancel
