--- a/views/backbone/comment-item.jade
+++ b/views/backbone/comment-item.jade
@@ -5,17 +5,12 @@ script#template-comment-item-view(type="text/template")
   |  span.speaker-detail!= content
   |  div.comment-option
   |    div.item-time= "Creation: " + cantas.utils.formatDate(createdOn)
-  |    - if(typeof updatedOn !== 'undefined'){
-  |    -   updatedOn = " Last Modified: " + cantas.utils.formatDate(updatedOn);
-  |    div.item-time= updatedOn
-  |    - }
-  |    - if(authorId._id === cantas.utils.getCurrentUser().id){
-  |    a.edit-comment.js-edit-comment(data-cid= _id) Edit
-  |    - }
-  |    // a.reply-comment Reply
+  |    if typeof updatedOn !== 'undefined'
+  |      div.item-time= " Last Modified: " + cantas.utils.formatDate(updatedOn)
+  |    if authorId._id === cantas.utils.getCurrentUser().id
+  |      a.edit-comment.js-edit-comment(data-cid= _id) Edit
 
 script#template-comment-item-edit-view(type="text/template")
   |textarea.js-comment-input
   |button.btn.btn-primary.js-save-comment Save
   |button.btn.js-cancel-comment Cancel
-
