--- a/views/backbone/dashboard-navigation.jade
+++ b/views/backbone/dashboard-navigation.jade
@@ -3,14 +3,14 @@ script#template-dashboard-navigation-view(type="text/template")
   |  li
   |  li
   |    span
-  |    a.nav-boards-public(onclick="cantas.navigateTo('boards/public')") Public Boards
+  |    a.nav-boards-public(href="/boards/public") Public Boards
   |  li
   |    span
-  |    a.nav-boards-mine(onclick="cantas.navigateTo('boards/mine')") My Boards
+  |    a.nav-boards-mine(href="/boards/mine") My Boards
   |  li
   |    span
-  |    a.nav-boards-closed(onclick="cantas.navigateTo('boards/closed')") Closed Board
+  |    a.nav-boards-closed(href="/boards/closed") Closed Board
   |  li
   |    span
-  |    a.nav-cards-mine(onclick="cantas.navigateTo('cards/mine')") My Cards
+  |    a.nav-cards-mine(href="/cards/mine") My Cards
   |  li
