--- a/views/backbone/welcome.jade
+++ b/views/backbone/welcome.jade
@@ -26,7 +26,7 @@ script#template-welcome-view(type="text/template")
   |          blockquote
   |            <p>Finding a flexible tool to manage your work?
   |            <br>Your current tool is so complicated?<br>
-  |            <br>You've come to the right place!
+  |            <br>You&lsquo;ve come to the right place!
   |            <br>Let us show you a <strong>simple and easy tool</strong> to manage your work!</p>
   |      div.sl-slide.bg-2(data-orientation='vertical', data-slice1-rotation='10', data-slice2-rotation='-15', data-slice1-scale="1.5", data-slice2-scale='1.5')
   |        div.sl-slide-inner
