--- a/views/application.jade
+++ b/views/application.jade
@@ -33,7 +33,7 @@ block append scripts
 
   //- templates for backbone view
   include backbone/help
-  include backbone/settings
+  include backbone/accountSettings
   include backbone/welcome
   include backbone/dashboard
   include backbone/dashboard-navigation
