REV: Add due date to a card

--- a/views/application.jade
+++ b/views/application.jade
@@ -53,6 +53,7 @@ block append scripts
   include backbone/card-attachment
   include backbone/card-attachment-upload
   include backbone/card-attachment-download
+  include backbone/card-due-date
   include backbone/archived
   include backbone/archived-item
   include backbone/import-bugzilla
