--- a/views/backbone/card-detail.jade
+++ b/views/backbone/card-detail.jade
@@ -14,11 +14,12 @@ script#template-card-detail-view(type="text/template")
   |        div.card-filter.clearfix
   |      a.card-vote.js-edit-vote
   |      a.js-subscribe
+  |      a.card-due-date.js-edit-due-date Due date
   |      div.modal.window-label.window-detail.hide
   |      div.modal.window-assign.window-detail.hide
   |      div.modal.window-vote.window-detail.hide
+  |      div.modal.window-due-date.window-detail.hide
   |      div.modal.window-attachment.window-detail.hide
-  |      a.due-date(style="display: none;") Set due date
   |  div.modal-body
   |    div.card-option-panel
   |      section
