--- a/views/backbone/card-due-date.jade
+++ b/views/backbone/card-due-date.jade
@@ -10,8 +10,9 @@ script#template-card-due-date-view(type="text/template")
   |        input(type="text", value=dueDate, class="input-due-date js-due-date", name="due-date")
   |      div.field-time
   |        label Time
-  |        input(type="text", value=dueTime, class="input-due-time js-due-time js-timepicker", name="due-time")
+  |        input(type="text", value=dueTime, class="input-due-time js-due-time", name="due-time")
   |    div.js-datepicker
+  |    div.js-timepicker
   |footer.modal-footer
   |  button.btn.btn-primary.js-save Save
   |  button.btn.js-close Cancel
