--- a/views/backbone/card-due-date.jade
+++ b/views/backbone/card-due-date.jade
@@ -15,4 +15,5 @@ script#template-card-due-date-view(type="text/template")
   |    div.js-timepicker
   |footer.modal-footer
   |  button.btn.btn-primary.js-save Save
+  |  button.btn.btn-danger.js-delete Remove
   |  button.btn.js-close Cancel
