Add due date filtering to card list view

--- a/views/backbone/card.jade
+++ b/views/backbone/card.jade
@@ -23,6 +23,8 @@ script#template-card-view(type="text/template")
   |          span.card-vote(title=" \#{badges.votesYes} agree,  \#{badges.votesNo} disagree.")= badgesVotes
   |        if badges.attachments !== 0
   |          span.card-attachment(title=" \#{badges.attachments} attachment(s).")= badges.attachments
+  |      if dueDateDisplay
+  |        span.card-due-date= "Due " + dueDateDisplay
   |    if typeof index !== "undefined"
   |      div.card-index(title="Card Position")
   |      span.order-number= index
