--- a/views/backbone/dashboard-navigation.jade
+++ b/views/backbone/dashboard-navigation.jade
@@ -14,3 +14,6 @@ script#template-dashboard-navigation-view(type="text/template")
   |    span
   |    a.nav-cards-mine(href="/cards/mine") My Cards
   |  li
+  |    span
+  |    a.nav-account-settings(onclick="cantas.navigateTo('account')") Account Settings
+  |  li
