Refactored naming for account settings.
No functional changes.
'settings' is too generic a word to refer to Account Settings,
so any naming was amended to specifically refer to 'account' settings.

--- a/views/backbone/accountSettings.jade
+++ b/views/backbone/accountSettings.jade
@@ -1,4 +1,4 @@
-script#template-settings-view(type="text/template")
+script#template-account-settings-view(type="text/template")
   |div.board-ul-title
   |  h3= header
   |div.settings-container
