--- a/views/backbone/dashboard-navigation.jade
+++ b/views/backbone/dashboard-navigation.jade
@@ -15,5 +15,5 @@ script#template-dashboard-navigation-view(type="text/template")
   |    a.nav-cards-mine(href="/cards/mine") My Cards
   |  li
   |    span
-  |    a.nav-account-settings(href="/settings") Account Settings
+  |    a.nav-account-settings(href="/account") Account Settings
   |  li
