Allow users to sort cards by board, created at and due date

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -819,9 +819,12 @@ input:focus, textarea:focus{
     color: #fff;
 }
 
-.filter-group {
+.panel-group {
     margin-bottom: 15px;
+}
 
+.panel-group-title {
+    margin-bottom: 5px;
 }
 
 .sidebar-items i {
