--- a/views/backbone/card-list.jade
+++ b/views/backbone/card-list.jade
@@ -1,7 +1,8 @@
 script#template-card-list-view(type="text/template")
   |div.board-ul-title
   |  h3= h3Header
-  |div.card-archive-list
+  |div.card-scroll-view
+  |  div.card-archive-list
 
 script#template-card-list-view-no-results(type="text/template")
   |p.alert.alert-info
