--- a/views/application.jade
+++ b/views/application.jade
@@ -88,6 +88,7 @@ block append scripts
     //- models/views
     script(type="text/javascript", src="/javascripts/models/base.js")
     script(type="text/javascript", src="/javascripts/views/base.js")
+    script(type="text/javascript", src="/javascripts/views/infiniteScroll.js")
     script(type="text/javascript", src="/javascripts/models/activity.js")
     script(type="text/javascript", src="/javascripts/views/activity.js")
     script(type="text/javascript", src="/javascripts/models/notification.js")
