--- a/views/layout.jade
+++ b/views/layout.jade
@@ -85,6 +85,7 @@ html
                 script(type='text/javascript', src='/javascripts/vendor/jquery.fileupload-image.js')
                 script(type='text/javascript', src='/javascripts/vendor/jquery.fileupload-validate.js')
                 script(type='text/javascript', src='/javascripts/vendor/jquery-ui-timepicker-addon.js')
+                script(type='text/javascript', src='/javascripts/vendor/waypoints.js')
 
         script(type="text/javascript", class="piwik-tracker").
             try {
