Link static card view board name to the card's board

--- a/views/backbone/card.jade
+++ b/views/backbone/card.jade
@@ -31,4 +31,4 @@ script#template-card-view(type="text/template")
   |    div.card-filter.clearfix
 
 script#template-card-meta-view(type="text/template")
-  |div.card-meta= meta
+  |div.card-meta!= meta
