Allow board admins to set permissions for managing lists and cards

--- a/views/application.jade
+++ b/views/application.jade
@@ -73,8 +73,7 @@ block append scripts
   include backbone/comment
   include backbone/comment-item
   include backbone/admin-config
-  include backbone/vote-config
-  include backbone/comment-config
+  include backbone/permission-widget
   include backbone/sidebar
 
   - if (process.env.NODE_ENV == 'production')
