--- a/views/backbone/admin-config.jade
+++ b/views/backbone/admin-config.jade
@@ -7,7 +7,22 @@ script#template-admin-config-view(type="text/template")
   |    div.modal-body
   |      article.admin-config
   |        section.row-fluid
-  |          dl.span6.js-vote
-  |          dl.span6.js-comment
+  |          dl.span6
+  |            dt
+  |              h3 Vote
+  |            dd.js-vote
+  |          dl.span6
+  |            dt
+  |              h3 Comment
+  |            dd.js-comment
+  |        section.row-fluid
+  |          dl.span6
+  |            dt
+  |              h3 Manage Lists
+  |            dd.js-list
+  |          dl.span6
+  |            dt
+  |              h3 Manage Cards
+  |            dd.js-card
   |    footer.modal-footer
   |      button.btn(data-dismiss="modal") Close
