Changes from feedback
Fix jshint errors (+4 squashed commits)
Squashed commits:
[0da0d6d] Revert board and card back to original styles
[de28cd8] Clear the results and show a message if the user has not entered a search query
[d2e5c69] Move full results button to bottom right corner
[aa67646] Display the total number of search results (informs user that only partial results are being displayed)

--- a/views/backbone/board-list.jade
+++ b/views/backbone/board-list.jade
@@ -12,14 +12,16 @@ script#template-board-list-view(type="text/template")
   |    if board.isClosed == true
   |      li.board-close
   |        div.owner.board-name= board.title
-  |        span= cantas.utils.formatDate(board.created)
-  |        span= board.creatorId.username
+  |        div.board-meta
+  |          span= cantas.utils.formatDate(board.created)
+  |          span= board.creatorId.username
   |        if isCreator(board)
   |          a.js-open-board.reopen.board-list-status(data-board= board._id, title="Open this board")
   |    else
   |      li
   |        a.owner.board-name.js-view-board(href="/board/\#{board._id}")= board.title
-  |        span= cantas.utils.formatDate(board.created)
-  |        span= board.creatorId.username
+  |        div.board-meta
+  |          span= cantas.utils.formatDate(board.created)
+  |          span= board.creatorId.username
   |        if isCreator(board)
   |          a.js-close-board.delete.board-list-status(data-board= board._id, title="Close this board")
