--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -625,11 +625,11 @@ input:focus, textarea:focus{
  */
 .quick-search-content {
     position: relative;
-    height: 0;
+    max-height: 0;
     overflow: hidden;
-    -moz-transition: all 0.25s ease-out;
-    -webkit-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
 }
 
 .quick-search-content:after {
@@ -649,7 +649,7 @@ input:focus, textarea:focus{
 }
 
 .quick-search-content.active {
-    height: 360px;
+    max-height: 600px;
     margin-bottom: 10px;
     padding-top: 1px;
 }
@@ -662,12 +662,25 @@ input:focus, textarea:focus{
     margin: 9px 0;
 }
 
-.quick-search-content .board-ul-title .btn {
-    margin: 0 2% 0 0;
-}
-
 .quick-search-content .results-container {
     padding: 10px 2%;
+}
+
+.quick-search-content .no-results {
+    text-align: center;
+    padding: 100px 0 120px;
+}
+
+.quick-search-content .no-results .message {
+    font-size: 18px;
+    color: #999;
+}
+
+.quick-search-content .js-full-results {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    z-index: 10;
 }
 
 .quick-search-content .count, .search-results-container .count {
@@ -683,11 +696,30 @@ input:focus, textarea:focus{
 }
 
 .quick-search-content .board-ul {
+    max-height: none;
     margin-top: 9px;
+    border: none;
+}
+
+.quick-search-content .board-ul li {
+    background: #EAEAEA;
+    border: 1px solid #5E9DD3 !important;
+    margin-bottom: 10px;
 }
 
 .quick-search-content .board-ul li > span {
     display: none;
+}
+
+.quick-search-content .board-close {
+    opacity: 0.6;
+}
+.quick-search-content .board-close:after {
+    content: "(Closed)";
+    position: absolute;
+    top: 3px;
+    right: 15px;
+    color: #999;
 }
 
 
@@ -1587,17 +1619,16 @@ input:focus, textarea:focus  .list-panel>li{
     /*background: -moz-linear-gradient(#FFF191, #FCDF71, #F8D85A) repeat scroll 0 0 transparent;
     background: -webkit-linear-gradient(top,#FFF191, #FCDF71, #F8D85A);
     /*font-family: 'Gloria Hallelujah', cursive;*/
-    background: #fff;
-    border: none;
+    background: #eaeaea;
+    border: 1px solid #5E9DD3;
     font-size: 13px;
     color: #000;
-    padding: 10px 10px 16px;
+    padding: 6px 6px 12px;
     min-width: 80%;
     margin: 9px 6px;
     z-index: 0;
     box-shadow: 1px 1px 1px #ccc;
     position: relative;
-    border-radius: 3px;
 }
 .card:hover{
     background: #F9F9F9;
@@ -1617,7 +1648,7 @@ input:focus, textarea:focus  .list-panel>li{
 .card .card-index{
     float: left;
     border-color: transparent transparent #5E9DD3 #5E9DD3;
-    border-width: 4px;
+    border-width: 10px;
     border-style: solid;
     position: absolute;
     left: 0;
@@ -1625,10 +1656,10 @@ input:focus, textarea:focus  .list-panel>li{
 }
 .card .order-number{
     line-height: 12px;
-    color: #5E9DD3;
+    color: #fff;
     position: absolute;
-    bottom: 4px;
-    left: 5px;
+    bottom: 0;
+    left: 0;
     font-size: 10px;
 }
 .card-filter{
@@ -2144,24 +2175,28 @@ z-index: 10000
 .board-ul{
     max-height: 84%;
     overflow-y: auto;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    width: 98%;
+    border-bottom: 1px solid #222;
 }
 .board-ul li{
     line-height: 36px;
     position: relative;
     background: #fff;
-    box-shadow: 1px 1px 1px #CCC;
-    margin: 0 0 7px;
-    padding: 7px;
-    border-radius: 3px;
-    border: none;
+    background: -moz-linear-gradient(#FFFFFF, #FAFAFA, #FFFFFF);
+    box-shadow: 1px 1px 1px #EEEEEE;
+    margin: 1px 0;
+    box-shadow: 1px 1px 1px #eee;
+    padding: 0;
 }
 .board-ul-wapper{
     background: -moz-linear-gradient(#484848, #3a3a3a, #272727);
     background: -webkit-linear-gradient(top, #484848, #3a3a3a, #272727);
     margin-top: 9px;
-    border-radius: 3px;
+    width: 98%;
+    border-radius: 3px 3px 0 0;
     border: 1px solid #222;
-    margin-bottom: 10px;
 }
 .board-ul-wapper .board-ul-header{
     border-top: 1px solid #888;
@@ -2188,7 +2223,7 @@ z-index: 10000
 }
 .board-ul li .board-list-status{
     position: absolute;
-    top: 15px;
+    top: 10px;
     right: 5px;
     display: none;
 }
@@ -2196,11 +2231,10 @@ z-index: 10000
     display: block;
 }
 .board-ul li .board-name{
-    display: inline-block;
+    display: block;
     margin-bottom: 0;
-    padding: 0 0 0 18px;
+    padding: 10px 18px;
     line-height: 22px;
-    width: 60%;
     text-decoration: underline;
 }
 .board-ul li a.invited{
@@ -2218,13 +2252,19 @@ z-index: 10000
 .board-ul li a.archive + span + span:hover{
     color:#ea0011;
 }
-.board-ul li > span{
-    margin-right: 18px;
+.board-ul .board-meta {
+    position: absolute;
+    top: 3px;
+    right: 12px;
+}
+.board-ul .board-meta > span{
+    margin-right: 30px;
     float: right;
     color: #333;
 }
 .board-ul li:hover{
     cursor: pointer;
+    background: rgba(0,0,0,0);
 }
 .notice td a{
     width: 75%;
