Set a min height on the quick search results

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -664,6 +664,7 @@ input:focus, textarea:focus{
 
 .quick-search-content .results-container {
     padding: 10px 2%;
+    min-height: 300px;
 }
 
 .quick-search-content .no-results {
