--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+htmy
     head
         title= title
         meta(content="width=device-width, minimum-scale=1.0, maximum-scale=1.0", name="viewport")
@@ -66,7 +66,7 @@ html
             - if (process.env.NODE_ENV == 'production')
                 script(type="text/javascript", src="/javascripts/dist/vendor.min.js")
             - else
-                script(type="text/javascript", src="/javascripts/vendor/jquery-2.0.0.js")
+                script(type="text/javascript", src="/javascripts/vendor/jquery-2.1.1.js")
                 script(type="text/javascript", src="/javascripts/vendor/jquery.slug.js")
                 script(type="text/javascript", src="/javascripts/vendor/async.js")
                 script(type="text/javascript", src="/javascripts/vendor/markdown.js")
