FIX: fix typo in views/layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-htmy
+html
     head
         title= title
         meta(content="width=device-width, minimum-scale=1.0, maximum-scale=1.0", name="viewport")
