markdown links moved to footer, now only open in new window/tab
* removed old links, new link in footer
* using target="_blank" instead of javascript
* removed unused javascript function

--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -2856,6 +2856,11 @@ card{
   display: none;
 }
 
+.footer-left {
+  float: left;
+  padding: 4px;
+}
+
 /*=================Checklist=====================*/
 .checklist{
   margin-bottom: 18px;
