--- a/views/login.jade
+++ b/views/login.jade
@@ -18,7 +18,7 @@ html
           header
             img(class="login-header",src="/images/cantas-login.png")
           form(action='/login', method='POST')
-            input(type="text",name="username",id="username-login",placeholder="kerberos Name",tabindex="1",a  utocomplete="off",autocorrect="off",spellcheck="false",autocapitalize="off",autofocus="")
+            input(type="text",name="username",id="username-login",placeholder="Username",tabindex="1",a  utocomplete="off",autocorrect="off",spellcheck="false",autocapitalize="off",autofocus="")
             input(type="password",placeholder="Password",name="password",id="password-login",tabindex="2")
             button(type="submit",class="btn btn-inverse login-button",tabindex="3") Log In
             a#loginWithGoogle(href="/auth/google") Log in with Google
